<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">云计划</string>
    <string name="nick_name">昵称</string>
    <string name="register_name">邮箱</string>
    <string name="login_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="account">账户信息</string>
    <string name="personal_sharing">我的分享</string>
    <string name="newplan">添加计划</string>
    <string name="my_header">我的头像</string>
    <string name="sex">性别</string>
    <string name="repassword">修改登录密码</string>
    <string name="logout">退出登录</string>
    <string name="oldpassword">原密码</string>
    <string name="newpassword">新密码</string>
    <string name="confirm">确认</string>
   <string name="newname">我的昵称</string>
    <string name="birthday">生日</string>
    <string name="education">教育信息</string>
    <string name="signature">个性签名</string>
    <string name="work">工作信息</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="unset">未设置</string>


    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
</resources>
