<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/gray_m">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:background="@android:color/white"
            android:layout_marginTop="30dp" >
        <EditText android:layout_width="match_parent" android:id="@+id/oldpassword"
                  android:layout_height="match_parent" android:background="@android:color/white"
                  android:hint="@string/oldpassword" android:layout_gravity="center_vertical" android:textSize="20dp"
                  android:gravity="fill_vertical" android:textColorHint="@color/gray_l" android:paddingLeft="10dp"
                  android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:layout_marginTop="1dp">
        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent" android:background="@android:color/white"
                  android:hint="@string/newpassword" android:textSize="20dp" android:gravity="fill_vertical"
                  android:textColorHint="@color/gray_l" android:paddingLeft="10dp" android:id="@+id/newpassword"
                  android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50dp"
                  android:background="@android:color/white" android:layout_marginTop="1dp">
        <EditText android:layout_width="match_parent" android:layout_height="match_parent"
                  android:background="@android:color/white" android:hint="@string/confirm_password" android:textSize="20dp"
                  android:gravity="fill_vertical" android:textColorHint="@color/gray_l" android:paddingLeft="10dp"
                  android:id="@+id/repassword" android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

       <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/confirm"
               android:id="@+id/confirm" android:background="@drawable/button_select" android:layout_weight="1.5"
               android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
               android:textAppearance="@android:style/TextAppearance.Large" android:textColor="@android:color/white"
               android:layout_marginTop="100dp" android:textSize="20dp"/>
   </LinearLayout>


</LinearLayout>