<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#f5f5f5">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@android:color/white"
                      android:layout_weight="1"
                      android:layout_marginTop="30dp">

                    <EditText android:id="@+id/username"
                              android:hint="@string/nick_name"
                              android:layout_weight="6"
                              android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:inputType="text" android:textColor="@android:color/black"
                              android:textColorHint="#b9b9b9"/>
                 </LinearLayout>


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal"
                                  android:layout_marginTop="1dp" android:background="@android:color/white"
                                  android:layout_weight="1">

                        <EditText android:id="@+id/email"
                                  android:hint="@string/register_name"
                                  android:layout_width="wrap_content"
                                  android:layout_height="match_parent"
                                  android:layout_weight="6"
                                  android:inputType="text" android:textColor="@android:color/black"
                                  android:textColorHint="#b9b9b9"/>
                    </LinearLayout>


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal"
                                  android:layout_marginTop="1dp" android:background="@android:color/white"
                                  android:layout_weight="1">

                        <EditText android:id="@+id/password"
                                  android:hint="@string/login_password"
                                  android:layout_width="wrap_content"
                                  android:layout_height="match_parent"
                                  android:layout_weight="6"
                                  android:inputType="textPassword" android:textColor="@android:color/black"
                                  android:textColorHint="#b9b9b9"/>
                    </LinearLayout>


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal"
                                  android:layout_marginTop="1dp" android:layout_weight="1"
                                  android:background="@android:color/white">

                        <EditText android:id="@+id/repassword"
                                  android:hint="@string/confirm_password"
                                  android:layout_width="wrap_content"
                                  android:layout_height="match_parent"
                                  android:inputType="textPassword" android:layout_weight="6"
                                  android:textColor="@android:color/black" android:textColorHint="#b9b9b9"/>
                    </LinearLayout>


                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5">
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                                        <Button android:id="@+id/register"
                                                android:layout_width="0dp"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1.5"
                                                android:text="@string/register"
                                                android:background="@drawable/button_select"
                                                android:layout_marginLeft="15dp"
                                                android:layout_marginRight="15dp"
                                                android:textStyle="bold"/>


                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="8">
                    </LinearLayout>

</LinearLayout>
